## Changelog

## master

- Add: support of custom docker environment (more details in the readme.md)

## v0.1.2

- Add: Documentation
- Change it to support python >= 3.6
- Update requirement in the setup.py
- Add: Suppress mesos framework offers if there are no tasks in the queue

## v0.1.1

- Add Mesos Executor
- Make container type configurable and add TTY for UCR container

## v0.1.0:
  Creation