@@ -3,6 +3,8 @@
 ## master
 
 - Add: support of custom docker environment (more details in the readme.md)
+- Change: Mesos task name would be generated by Airflow dag_id, task_id and 
+execution_date
 
 ## v0.1.2
 
